<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Another Widget</string>
    <string name="add_widget">Add Widget</string>
    <string name="settings_general_title">Display</string>
    <string name="divider" translatable="false">|</string>
    <string name="settings_font_color_title">Text color</string>
    <string name="settings_secondary_font_color_title">Text color</string>
    <string name="settings_background_color_title">Background color</string>
    <string name="title_main_text_size">Text size</string>
    <string name="title_second_text_size">Text size</string>
    <string name="settings_custom_font_title">Widget font</string>
    <string name="custom_font_subtitle_0">Device font</string>
    <string name="custom_font_subtitle_1">Google Sans</string>
    <string name="custom_date_format">Custom date format</string>
    <string name="alpha">Alpha</string>
    <string name="transparent">Transparent</string>
    <string name="settings_show_dividers_title">Text separators</string>
    <string name="first_row_header">Primary Text</string>
    <string name="second_row_header">Secondary Text</string>
    <string name="global_style_header">Widget</string>
    <string name="action_capitalize_the_date">Capitalize the date</string>
    <string name="settings_date_format_title">Date format</string>
    <string name="header_widget_background" tools:ignore="MissingTranslation">Widget background</string>
    <string name="settings_secondary_row_top_margin_title" tools:ignore="MissingTranslation">Rows spacing</string>
    <string name="action_custom_font_to_search" tools:ignore="MissingTranslation">Custom font…</string>
    <string name="font_family_settings_title" tools:ignore="MissingTranslation">Font family</string>
    <string name="settings_widget_align_title" tools:ignore="MissingTranslation">Widget alignment</string>
    <string name="settings_widget_align_left_subtitle" tools:ignore="MissingTranslation">Left</string>
    <string name="settings_widget_align_right_subtitle" tools:ignore="MissingTranslation">Right</string>
    <string name="settings_widget_align_center_subtitle" tools:ignore="MissingTranslation">Center</string>
    <string name="font_100" translatable="false">Thin</string>
    <string name="font_200" translatable="false">Light</string>
    <string name="font_300" translatable="false">Book</string>
    <string name="font_400" translatable="false">Regular</string>
    <string name="font_500" translatable="false">Medium</string>
    <string name="font_600" translatable="false">Semi-bold</string>
    <string name="font_700" translatable="false">Bold</string>
    <string name="font_800" translatable="false">Black</string>
    <string name="font_900" translatable="false">Heavy</string>
    <string name="font_italic" translatable="false">Italic</string>
    <string name="font_100_italic" translatable="false">Thin Italic</string>
    <string name="font_200_italic" translatable="false">Light Italic</string>
    <string name="font_300_italic" translatable="false">Book Italic</string>
    <string name="font_400_italic" translatable="false">Regular Italic</string>
    <string name="font_500_italic" translatable="false">Medium Italic</string>
    <string name="font_600_italic" translatable="false">Semi-bold Italic</string>
    <string name="font_700_italic" translatable="false">Bold Italic</string>
    <string name="font_800_italic" translatable="false">Black Italic</string>
    <string name="font_900_italic" translatable="false">Heavy Italic</string>
    <string name="settings_widget_padding_title" tools:ignore="MissingTranslation">Widget padding</string>
    <string name="settings_widget_margin_title" tools:ignore="MissingTranslation">Widget margin</string>
    <string name="settings_widget_dim_none" tools:ignore="MissingTranslation">None</string>
    <string name="settings_widget_dim_small" tools:ignore="MissingTranslation">Small</string>
    <string name="settings_widget_dim_medium" tools:ignore="MissingTranslation">Medium</string>
    <string name="settings_widget_dim_large" tools:ignore="MissingTranslation">Large</string>
    <string name="settings_calendar_title">Calendar</string>
    <string name="title_permission_calendar">Show your events</string>
    <string name="description_permission_calendar">Grant access to your calendar\nto view events in your widget.</string>
    <string name="settings_filter_calendar_title">Filter events</string>
    <string name="settings_filter_calendar_subtitle">Change calendar visibility</string>
    <string name="settings_all_day_title">All day events</string>
    <string name="main_calendar">Account calendar</string>
    <string name="calendar_settings_list_error">Error loading the calendar list.</string>
    <string name="all_day">All day event</string>
    <string name="show_events_visible">Events are visible</string>
    <string name="show_events_not_visible">Events are hidden</string>
    <string name="settings_show_until_subtitle_6">30 minutes later</string>
    <string name="settings_show_until_subtitle_7">1 hour later</string>
    <string name="settings_show_until_subtitle_0">3 hours later</string>
    <string name="settings_show_until_subtitle_1">6 hours later</string>
    <string name="settings_show_until_subtitle_2">12 hours later</string>
    <string name="settings_show_until_subtitle_3">24 hours later</string>
    <string name="settings_show_until_subtitle_4">3 days later</string>
    <string name="settings_show_until_subtitle_5">7 days later</string>
    <string name="settings_show_until_title">Show events at least</string>
    <string name="day_char">d</string>
    <string name="settings_calendar_app_title">Calendar</string>
    <string name="error_no_calendar">No calendars found.</string>
    <string name="tomorrow">tomorrow</string>
    <string name="today">today</string>
    <string name="settings_event_app_title">Tap on event opens</string>
    <string name="settings_second_row_info_title">Event info</string>
    <string name="settings_second_row_info_subtitle_1">Event address</string>
    <string name="settings_second_row_info_subtitle_0">Event time</string>
    <string name="settings_show_diff_time_title">Time until the event</string>
    <string name="settings_show_declined_events_title">Declined events</string>
    <string name="default_event_app">Event details</string>
    <string name="default_calendar_app">Default calendar app</string>
    <string name="settings_show_multiple_events_title">Multiple events switcher</string>
    <string name="soon">soon</string>
    <string name="now">now</string>
    <string name="settings_widget_update_frequency_title">Time until event update frequency</string>
    <string name="settings_widget_update_frequency_subtitle">High frequency causes more battery consumption.</string>
    <string name="settings_widget_update_frequency_low">Low</string>
    <string name="settings_widget_update_frequency_default">Default</string>
    <string name="settings_widget_update_frequency_high">High</string>
    <string name="filters_header">Filters</string>
    <string name="event_detail_header">Event detail</string>
    <string name="settings_attendee_status_title" tools:ignore="MissingTranslation">Attendee status</string>
    <string name="settings_attendee_status_subtitle" tools:ignore="MissingTranslation">Filter accepted or declined events</string>
    <string name="settings_busy_events_title" tools:ignore="MissingTranslation">Relevant events</string>
    <string name="settings_busy_events_subtitle" tools:ignore="MissingTranslation">Show only events that keep busy</string>
    <string name="attendee_status_accepted" tools:ignore="MissingTranslation">Accepted events</string>
    <string name="attendee_status_invited" tools:ignore="MissingTranslation">Events invitations</string>
    <string name="attendee_status_declined" tools:ignore="MissingTranslation">Declined events</string>
    <string name="calendar_sync_notification_channel_id" translatable="false">calendar-sync</string>
    <string name="calendar_sync_notification_channel_name" tools:ignore="MissingTranslation">Events sync service</string>
    <string name="calendar_sync_notification_channel_description" tools:ignore="MissingTranslation">Service used to synchronize the calendar events.</string>
    <string name="calendar_sync_notification_title" tools:ignore="MissingTranslation">Syncing calendar events…</string>
    <string name="settings_show_next_event_on_multiple_lines_title" tools:ignore="MissingTranslation">Show title on multiple lines</string>
    <string name="settings_weather_title">Weather</string>
    <string name="title_permission_location">Show the weather</string>
    <string name="description_permission_location">Grant access to your location\nto view weather in your widget.</string>
    <string name="settings_unit_title">Unit of measure</string>
    <string name="fahrenheit" translatable="false">°F - Fahrenheit</string>
    <string name="celsius" translatable="false">°C - Celsius</string>
    <string name="settings_weather_refresh_period_title">Refresh frequency</string>
    <string name="settings_weather_refresh_period_subtitle_0">30 minutes</string>
    <string name="settings_weather_refresh_period_subtitle_1">1 hour</string>
    <string name="settings_weather_refresh_period_subtitle_2">3 hours</string>
    <string name="settings_weather_refresh_period_subtitle_3">6 hours</string>
    <string name="settings_weather_refresh_period_subtitle_4">12 hours</string>
    <string name="settings_weather_refresh_period_subtitle_5">24 hours</string>
    <string name="settings_custom_location_title">Location</string>
    <string name="custom_location_gps">Geolocation</string>
    <string name="show_weather_visible">Weather info is visible</string>
    <string name="show_weather_not_visible">Weather info is hidden</string>
    <string name="settings_weather_app_title">Weather</string>
    <string name="settings_weather_provider_api_key_title">Weather API key</string>
    <string name="settings_weather_provider_api_key_subtitle_all_set">The weather provider is configured correctly.</string>
    <string name="settings_weather_provider_api_key_subtitle_not_set">The weather provider must be configured.</string>
    <string name="api_key_hint">OpenWeatherMap API Key</string>
    <string name="default_weather_app">Google Weather</string>
    <string name="weather_warning">Google Awareness API is now deprecated. It is now required to have an API key from a third-party provider to show weather in the widget.</string>
    <string name="settings_weather_icon_pack_title">Icon pack</string>
    <string name="settings_weather_icon_pack_default">Icon pack %d</string>
    <string name="background_location_warning" tools:ignore="MissingTranslation">When Geolocation is selected, we collect location data to update the weather information even when the app is closed or not in use.\nWe will not use these data otherwise.</string>
    <string name="action_refresh_widget">Refresh widget</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_app_version_title">App version</string>
    <string name="settings_title_show_wallpaper">Show wallpaper</string>
    <string name="support_refresh_widget_subtitle">Force the restart of the widget service</string>
    <string name="settings_title">Settings</string>
    <string name="preferences_header">Preferences</string>
    <string name="settings_privacy_policy_title" tools:ignore="MissingTranslation"><![CDATA[Legal & Privacy]]></string>
    <string name="settings_privacy_policy_subtitle" tools:ignore="MissingTranslation">View the privacy policy of the app</string>
    <string name="information_header" tools:ignore="MissingTranslation">Information</string>
    <string name="action_show_widget_preview">Show widget preview</string>
    <string name="settings_title_integrations">Integrations</string>
</resources>