<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.tommasoberlose.anotherwidget.ui.viewmodels.MainViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="0dp"
            app:cardCornerRadius="0dp"
            android:background="@color/colorPrimary"
            android:transitionName="toolbar"
            android:id="@+id/toolbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/round_arrow_back_24"
                    app:tint="@color/colorPrimaryText"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:transitionName="action_back"
                    android:layout_marginEnd="8dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/action_back" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/settings_title"
                    android:textColor="@color/colorPrimaryText"
                    android:gravity="center"
                    android:paddingBottom="6dp"
                    android:transitionName="fragment_title"
                    android:textAppearance="@style/AnotherWidget.Main.Title"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.tommasoberlose.anotherwidget.components.FixedFocusScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:scrollbarThumbVertical="@color/colorPrimary"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="48dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:id="@+id/action_refresh_widget"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="11dp"
                        android:id="@+id/action_refresh_icon"
                        android:src="@drawable/round_refresh"
                        app:tint="@color/colorPrimaryText"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AnotherWidget.Settings.Title"
                            android:text="@string/action_refresh_widget"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_refresh_widget_subtitle"
                            style="@style/AnotherWidget.Settings.Subtitle" />
                    </LinearLayout>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preferences_header"
                    android:paddingTop="16dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textAppearance="@style/AnotherWidget.Settings.Header" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:id="@+id/action_show_widget_preview"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="11dp"
                        android:src="@drawable/round_compare_24"
                        app:tint="@color/colorPrimaryText"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AnotherWidget.Settings.Title"
                            android:text="@string/action_show_widget_preview"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/show_widget_preview_label"
                            style="@style/AnotherWidget.Settings.Subtitle" />
                    </LinearLayout>
                    <com.kyleduo.switchbutton.SwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:kswThumbWidth="16sp"
                        app:kswThumbHeight="16sp"
                        app:kswBackRadius="16dp"
                        app:kswTintColor="@color/colorAccent"
                        android:layout_marginEnd="16dp"
                        android:id="@+id/show_widget_preview_toggle"
                        android:buttonTint="@color/colorAccent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:id="@+id/action_show_wallpaper"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="12dp"
                        android:src="@drawable/round_wallpaper"
                        app:tint="@color/colorPrimaryText"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AnotherWidget.Settings.Title"
                            android:text="@string/settings_title_show_wallpaper"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/show_wallpaper_label"
                            style="@style/AnotherWidget.Settings.Subtitle"/>
                    </LinearLayout>
                    <com.kyleduo.switchbutton.SwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:kswThumbWidth="16sp"
                        app:kswThumbHeight="16sp"
                        app:kswBackRadius="16dp"
                        app:kswTintColor="@color/colorAccent"
                        android:layout_marginEnd="16dp"
                        android:id="@+id/show_wallpaper_toggle"
                        android:buttonTint="@color/colorAccent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:clickable="true"
                    android:visibility="gone"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:id="@+id/action_integrations"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="12dp"
                        android:src="@drawable/round_extension_24"
                        app:tint="@color/colorPrimaryText"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AnotherWidget.Settings.Title"
                            android:text="@string/settings_title_integrations"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/integrations_count_label"
                            style="@style/AnotherWidget.Settings.Subtitle"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:id="@+id/action_change_theme"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="11dp"
                        android:src="@drawable/ic_day_night"
                        app:tint="@color/colorPrimaryText"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AnotherWidget.Settings.Title"
                            android:text="@string/settings_theme_title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/theme"
                            style="@style/AnotherWidget.Settings.Subtitle"/>
                    </LinearLayout>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_header"
                    android:paddingTop="16dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textAppearance="@style/AnotherWidget.Settings.Header" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:id="@+id/action_privacy_policy"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="12dp"
                        android:src="@drawable/round_privacy_tip_24"
                        app:tint="@color/colorPrimaryText"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AnotherWidget.Settings.Title"
                            android:text="@string/settings_privacy_policy_title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_privacy_policy_subtitle"
                            style="@style/AnotherWidget.Settings.Subtitle"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/small_clock_warning"
                    android:gravity="start"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:duplicateParentState="true"
                        android:textSize="16sp"
                        android:text="@string/settings_app_version_title"
                        android:textColor="@color/colorSecondaryText"
                        android:letterSpacing="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        app:textAllCaps="false" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="12dp"
                        android:duplicateParentState="true"
                        android:textSize="14sp"
                        android:textColor="@color/colorSecondaryText"
                        android:letterSpacing="0"
                        android:id="@+id/app_version"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </com.tommasoberlose.anotherwidget.components.FixedFocusScrollView>
    </LinearLayout>
</layout>